[package]
name = "learn0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.8.19"
serde = { version = "1.0.210", features = ["derive"] }
regex = "1.10.6"
quick-xml = { version = "0.36.2", features = ["serialize"] }
